--- a/proyecto/web-miguelo2/src/main/resources/application.properties
+++ b/proyecto/web-miguelo2/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port= 2000
+server.servlet.context-path=/apimiguelo
+#cadena de conexión
+spring.datasource.url=jdbc:mysql://localhost:3306/db_miguelo?allowPublicKeyRetrieval=true&useSSL=false
+#usuario de BD
+spring.datasource.username=root
+#driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
 
